fix the horizontal additonal space by removing the margin of right and left of the class row add an image to the "change your life style today" section make sure the z-index is used between the image and footer section

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 /* Section 1  */
 body {
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  z-index: 10;
+
 }
+
 
 #title {
   background-color: #85C1E9;
@@ -104,7 +108,6 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .guranteedtowork {
@@ -154,60 +157,72 @@ body {
 }
 
 /* The pricing section  */
-.pricing_center
-{
-text-align: center;
-
-
+.pricing_center {
+  text-align: center;
 }
 
-.pricing_title_clearances
-{
-padding-top: 1rem;
-padding-bottom: 1rem;
-padding-left: auto;
-padding-right: auto;
+.pricing_title_clearances {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: auto;
+  padding-right: auto;
+}
+.row {
+margin-left: 0;
+margin-right: 0;
 
 }
-
-
-.options_clearances
-{
+.options_clearances {
   padding-top: 1rem;
   padding-bottom: 1rem;
   padding-left: 6rem;
   padding-right: 6rem;
   text-align: center;
-
-
 }
 
 .card-option-border {
-  border:0rem;
+  border: 0rem;
 }
 
-
-.card_body-option
-{
-
-    padding-left: 0px;
-    padding-top: 0px;
-    padding-bottom: 1rem;
-    padding-right: 0px;
-    border-style: solid;
-
+.card_body-option {
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-bottom: 1rem;
+  padding-right: 0px;
+  border-style: solid;
 }
 
 .card-title_border {
- border-bottom: 0.1875rem solid black;
- background-color: #85C1E9;
-
+  border-bottom: 0.1875rem solid black;
+  background-color: #85C1E9;
 }
 
-.btn-settings
-{
+.btn-settings {
   background-color: #85C1E9;
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+/* The downlaod bottom section (dbs)  */
+.dbs-settings {
+  background-color: #85C1E9;
+  height: 37.5rem;
+}
+
+.womanfleximg {
+  display: block;
+  position: relative;
+  padding-top: 6rem;
+  z-index: 0;
+  float:right;
 
 }
+
+  /* The footer section */
+
+  .footersetting {
+    background-color: white;
+    position: relative;
+    z-index: 1;
+    padding-top: 1rem;
+  }
